public/styles.css
/* Styling */

body {
    background-color: white;
    text-align: center;
}
.center {
    text-align: center;
}
.div1 {
    background: url("images/space-image.jpg") center no-repeat;
    background-size: cover;
    overflow: hidden;
    width: 0%;
    position: static;
    opacity: 0;
    padding-top: 30px;
    padding-bottom: 30px;
    border-radius: 20px;
    display: inline-block;
    animation: 1s ease-in-out slideFromLeft forwards;
}

@keyframes slideFromLeft {
    100% {
        width: 100%;
        opacity: 1;
    }
}

.headerDiv {
    margin-left: 25%;
    margin-bottom: 50px;
    width: 50%;
    background-color: black;
    border-radius: 10px;
    padding: 1px;
    opacity: 0;
    animation: 1s div2Fade forwards 0.5s;
}

.nameFont {
    font-family: 'Press Start 2P', cursive;
    font-size: 30pt;
    color: azure;
}

.font1 {
    font-family: 'Fira Sans Condensed', sans-serif;
    font-size: 20pt;
    color: azure;
}

.div2 {
    text-align: center;
    width: 40%;
    margin: 0 auto;
    background-color: transparent;
    border-color: azure;
    border-radius: 5px;
    border-width: 3px;
    border-style: solid;
    box-shadow: 10px 10px black;
    opacity: 0;
    max-height: 80px;
    animation: 1s div2Fade forwards 0.7s;
}

@keyframes div2Fade {
    100% {
        opacity: 1;
    }
}

#trollFace {
    margin-bottom: 30px;
}

